# marvelrivalsapi

./: .gitignore  404.html  README.md  add_license.py  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml  styles.css  tests.py
.github/workflows/: lint-and-format.yml
api/client/: index.html
api/heroes/: index.html
api/player/: index.html
api/players/: index.html
api/utility/: index.html
client/: index.html
docs/: index.md  styles.css  tutorial.md
docs/api/: client.md  heroes.md  items_maps.md  players.md  utility.md
heroes/: index.html
marvelrivalsapi/: __init__.py  async_client.py  client.py  models.py  utility.py
search/: search_index.json
tutorial/: index.html
