[project]
name = "marvelrivalsapi"
version = "0.1.1-alpha"
description = ""
authors = [
    {name = "externref",email = "shiva02939@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "pygments (>=2.19.1,<3.0.0)"
]

[tool.ruff.lint]
per-file-ignores = { "__init__.py" = ["F403", "F401"] }


[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"
isort = "^6.0.1"
python-dotenv = "^1.1.0"
mypy = "^1.15.0"
pyright = "^1.1.400"
nox = "^2025.5.1"


[tool.poetry.group.docs.dependencies]
mkdocs = {extras = ["python"], version = "^1.6.1"}
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocs-material = {extras = ["imaging"], version = "^9.6.12"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
